v1.5/README.md
**디버깅 방법**
```
셸에서 코드 앞에 debug를 붙인다.
그러면 코드가 한 단계식 실행된다.
```

**기본 문법**

```
$1 : 정수 입력 후 1번 스택에 저장
$2 : 실수 입력 후 1번 스택에 저장
$3 : 문자열 입력 후 1번 스택에 저장

% : 1번 스택 맨 위 값 출력
^ : 1번 스택 맨 위 값 파괴

@nm : n번 스택의 맨 위 값을 m번 스택으로 옮김
#nm : n번 스택의 맨 위 값을 m번 스택으로 복제

!1(숫자) : 1번 스택에 정수를 넣음
!2(실수) : 1번 스택에 실수를 넣음
!3(문자열) : 1번 스택에 문자열을 넣음

+ : 1번 스택의 맨 위 2개의 값을 더해 다시 1번 스택에 넣음
- : 1번 스택의 맨 위 2개의 값을 빼 다시 1번 스택에 넣음
* : 1번 스택의 맨 위 2개의 값을 곱해 다시 1번 스택에 넣음
/ : 1번 스택의 맨 위 2개의 값을 나눠 다시 1번 스택에 넣음
: : 1번 스택의 맨 위 2개의 값을 나눈 나머지를 다시 1번 스택에 넣음

&n& : n번째 글자로 이동

~=n* : 1번 스택의 맨 위 2개의 값이 같다면 n번째 글자로 이동 (n에 ], }, >도 가능)
~1n* : 1번 스택의 맨 위 1개의 값이 위에서 2번째의 값보다 크다면 n번째 글자로 이동 (n에 ], }, >도 가능)
~2n* : 1번 스택의 맨 위 1개의 값이 위에서 2번째의 값보다 작다면 n번째 글자로 이동 (n에 ], }, >도 가능)
~-n* : 1번 스택의 맨 위 문자열의 n번째 인덱스의 값을 아스키 코드로 바꿔 1번 스택에 넣는다.

], }, >: 각각 [, {, < 로 이동

?함수명?코드;? : 함수를 선언한다. 함수를 종료할 땐 ;를 쓴다. 재귀함수 쌉가능
"함수명" : 함수를 호출한다.

'라이브러리파일.rk' : library폴더에 있는 라이브러리를 로드한다. 함수 사용하듯이 라이브러리 안 함수를 사용 가능하다.
```

**문자열 처리 라이브러리** `기본` **string.rk**
```
str.length : 문자열 길이 반환 | 문자열 -> 정수
str.front : 맨 앞 글자 반환 | 문자열 -> 문자열
str.back : 맨 뒤 글자 반환 | 문자열 -> 문자열
str.repeat : 문자열을 반복 | 문자열(파괴), 정수(파괴) -> 문자열
str.merge : 두 문자열 합치기 | 문자열(파괴), 문자열(파괴) -> 문자열
str.popFront : 문자열에서 앞 글자 제거 | 문자열(파괴) -> 문자열
str.reverse : 문자열 뒤집기 | 문자열(파괴) -> 문자열
str.toint : 문자열을 정수로 변환 | 문자열(파괴) -> 정수
str.slice : 문자열을 공백을 기준으로 분할 | 문자열(파괴) -> 여러개의 문자열
ASCtoStr : 아스키 코드를 문자로 | 숫자(파괴) -> 문자열
```

**수학 라이브러리** `기본` **math.rk**
```
math.plus : +와 동일
math.minus : -와 동일
math.multi : *와 동일
math.divis : /와 동일
math.mod : :와 동일
math.copy : 맨 위의 값을 복제 | 데이터 -> 데이터
math.square : 제곱 계산 | 숫자(파괴) -> 숫자
math.cubic : 세제곱 계산 | 숫자(파괴) -> 숫자
math.factorial : 팩토리얼 계산 | 정수(파괴) -> 정수
```

**표준 라이브러리** `기본` **stdlib.rk**
```
std.goFirst : 코드의 맨 앞부터 다시 실행합니다.
std.stackSize : 1번 스택의 값 개수를 계산합니다. | -> 정수
std.resetStack : 1번 스택을 초기화합니다.
```

**예제 코드**
```
헬로월드
!3(Hello, World!)%

1부터 10까지 출력
!1(1)<%!3( )%^!1(1)+!1(11)~=;*^>

홀수 짝수 판별
$1!1(2):!1(1)~=]*}[!3(Odd\n)%^^^>{!3(Even\n)%^^^<

팩토리얼 계산
$1!1(1)+@12!1(1)@13!1(1)<#31*@31!1(1)+@13#31#21~=]*^^>[^^!3(Result:)%^%@31@21

최대값 구하기
!3(Count:)%^$1@13!1(-1)$1~2>*^}<@12^@21{@31!1(1)-!1(0)~=]*^@13&24&[!3(Result:)%^^^%

99병의 맥주
!1(99)<%!3( bottles of beer on the wall, )%^%!3( bottles of beer.\n)%^!1(1)-
!3(Take one down and pass it around, )%^%!3( bottles of beer on the wall.\n)%^!1(1)~=]*^>
[!3(1 bottle of beer on the wall, 1 bottle of beer.
Take it down and pass it around, no more bottles of beer on the wall.
No more bottles of beer on the wall, no more bottles of beer.
Go to the store and buy some more, 99 bottles of beer on the wall.)%

안녕, n번째 세계?
?hn?!3(안녕, )%^%!3(번째 세계! )%^!1(1)+"hn";?!1(1)"hn"
```